# opencode-scan-runner

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
jobs/: job-crop.env.example  job-multi_langage.env.example  job-understand.env.example
opencode-config/crop/: README_multi-agent1.md  opencode.jsonc
opencode-config/crop/agents/: details-analyzer.md  details-worker.md  orchestrator.md
opencode-config/crop/tools/: merge-json.ts  merge-json.txt
opencode-config/multi_langage/: README_multi-agent1.md  STYLE_GUIDE.md  opencode.jsonc  scan-profiles.json
opencode-config/multi_langage/agents/: architecture.md  dataflow-module-scanner.md  dataflow-scanner.md  details-analyzer.md  details-worker.md  language-module-scanner.md  language-security-module-scanner.md  orchestrator.md  python-dataflow-module-scanner.md  python-security-module-scanner.md  reporter.md  security-auditor.md  security-module-scanner.md  threat-analyst.md  verification-worker.md  verification.md
opencode-config/multi_langage/language/: c-cpp.json  go.json  java.json  lua.json  python.json
opencode-config/multi_langage/tools/: report-generator.ts  report-generator.txt  scan-profile-resolver.ts  scan-profile-resolver.txt  validate-json.ts  (+3 more)
runner/: entrypoint.sh
sample-vulnerable-app/: CMakeLists.txt  README.md
sample-vulnerable-app/data/: welcome.txt
sample-vulnerable-app/include/: audit_log.hpp  diagnostics.hpp  file_cache.hpp  http_server.hpp  user_store.hpp
sample-vulnerable-app/src/: diagnostics.cpp  file_cache.cpp  http_server.cpp  main.cpp  user_store.cpp
(+70 files in other folders)
